# pow

./: .editorconfig  .gitattributes  .gitignore  .mcp.json  ANALYSIS-RU.md  LICENSE-APACHE  LICENSE-MIT  README.md  jupyter.sh  repro.sh
.github/workflows/: ci.yml  coverage.yml
analysis/: _lib.py  explore_results.ipynb  explore_results_simple.ipynb
python/: README.md  benchmark.py  main.py  pow.py  pyproject.toml  setup-analysis-env.sh
python/tests/: test_pow.py
results/: bench-oniguruma-20260525T120719Z-shani.json  bench-oniguruma-20260525T121557Z-mb.json  bench-oniguruma-20260525T132118Z-python.json
rust/: Cargo.toml  README.md  build.rs
rust/.cargo/: config.toml
rust/src/: .clangd  lib.rs  main.rs  mb.rs  pow_mb.c
rust/tests/: cross_backend.rs  invariants.rs
