[package]
name = "pow"
version = "0.1.0"
edition = "2021"

[features]
default = []
# multi-buffer SHA-256 via ISA-L Crypto (requires libisal_crypto on the host)
mb = []

[dependencies]
sha2 = "0.10"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
itoa = "1"
hex = "0.4"
rand = "0.8"

[build-dependencies]
cc = "1"

[dev-dependencies]
proptest = "1"

[[bin]]
name = "pow"
path = "src/main.rs"

[[bin]]
name = "pow-bench"
path = "src/bin/bench.rs"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
